--- a/templates/dashboard1.html
+++ b/templates/dashboard1.html
@@ -231,7 +231,7 @@
 
 
     <td>{{quotation.payment_terms}}</td>
-    <td>{{quotation.customer.customer_name}}</td>
+    <td>{{quotation.customer.employees_name}}</td>
 
 
     <td><a href="{% url 'email_page' quotation.id %}" class=""><i class="fa fa-paper-plane hvr-grow fa-lg"></i></a></td>
