--- a/templates/email/email.html
+++ b/templates/email/email.html
@@ -298,7 +298,7 @@ background:#eee;
 						<table class="main" width="100%" cellpadding="0" cellspacing="0" itemprop="action" itemscope="" itemtype="http://schema.org/ConfirmAction" style="font-family: 'Helvetica Neue',Helvetica,Arial,sans-serif; box-sizing: border-box; font-size: 14px; border-radius: 3px; margin: 0; border: none;">
 
 <td class="content-block" style="font-family: 'Helvetica Neue',Helvetica,Arial,sans-serif; box-sizing: border-box; font-size: 14px; vertical-align: top; margin: 0; padding: 0 0 20px;" valign="top">
-Dear,{{form.customer.customer_name}}  </td>
+Dear,{{form.customer.employees_name}}  </td>
 </tr>
 <tr style="font-family: 'Helvetica Neue',Helvetica,Arial,sans-serif; box-sizing: border-box; font-size: 14px; margin: 0;">
 <td class="content-block" style="font-family: 'Helvetica Neue',Helvetica,Arial,sans-serif; box-sizing: border-box; font-size: 14px; vertical-align: top; margin: 0; padding: 0 0 20px;" valign="top">
@@ -438,7 +438,7 @@ Remark:
                                         <span data-v-05b4f093="" data-v-b090a320="" class="float-left">
                                         Employee's Name:
                                         </span>
-                                        <span data-v-05b4f093="" data-v-b090a320="" class="float-right text-muted">{{form.customer.customer_name}}
+                                        <span data-v-05b4f093="" data-v-b090a320="" class="float-right text-muted">{{form.customer.employees_name}}
                                         </span>
                                         </p>
                                         <hr />
