--- a/templates/email/email.template.html
+++ b/templates/email/email.template.html
@@ -158,7 +158,7 @@ Date:
 <span data-v-05b4f093="" data-v-b090a320="" class="float-left">
 Employee's Name:
 </span>
-<span data-v-05b4f093="" data-v-b090a320="" class="float-right text-muted">{{customer_name}}
+<span data-v-05b4f093="" data-v-b090a320="" class="float-right text-muted">{{employees_name}}
 </span>
 </p>
 <hr />
