--- a/templates/jobs/detailJob.html
+++ b/templates/jobs/detailJob.html
@@ -120,7 +120,7 @@
                     Quotation Customer
                   </span>
                   <span data-v-05b4f093="" data-v-b090a320=""
-                    class="float-right text-muted">{{jobs.quotation.customer.customer_name}}
+                    class="float-right text-muted">{{jobs.quotation.customer.employees_name}}
                   </span>
                 </p>
                 <hr />
