--- a/templates/jobs/job_list.html
+++ b/templates/jobs/job_list.html
@@ -106,7 +106,7 @@ title="Go to Homepage"> <i class="feather icon-home"></i> </a>
 <td>{{quotation.status}}</td>
 
 
-<td>{{quotation.quotation.customer.customer_name}}</td>
+<td>{{quotation.quotation.customer.employees_name}}</td>
 
 <td>{{quotation.user}}</td>
 
