--- a/templates/jobs/job_listB.html
+++ b/templates/jobs/job_listB.html
@@ -103,7 +103,7 @@
 
 
 
-                          <td>{{quotation.quotation.customer.customer_name}}</td>
+                          <td>{{quotation.quotation.customer.employees_name}}</td>
                           <td>{{quotation.status}}</td>
 
                           {% if quotation.status == "Job Booked" or quotation.status == 'Job Booking Email Sent' %}
