--- a/templates/quotation/quoatation_list.html
+++ b/templates/quotation/quoatation_list.html
@@ -98,7 +98,7 @@
 {% for quotation in quotation %}
 <td>{{quotation.quotation_number}}</td>
 <td>{{quotation.airport_of_origin}}</td>
-<td>{{quotation.customer.customer_name}}</td>
+<td>{{quotation.customer.employees_name}}</td>
 <td>{{quotation.status}}</td>
 
 
