--- a/templates/quotation/quotation_detail.html
+++ b/templates/quotation/quotation_detail.html
@@ -206,7 +206,7 @@ Remarks                  </span>
                     Employee's Name
                   </span>
                   <span data-v-05b4f093="" data-v-b090a320=""
-                    class="float-right text-muted">{{quotation.customer.customer_name}}
+                    class="float-right text-muted">{{quotation.customer.employees_name}}
                   </span>
                 </p>
                 <hr />
