--- a/templates/dashboard1.html
+++ b/templates/dashboard1.html
@@ -65,7 +65,7 @@
     <div class="row align-items-center">
     <div class="col-8">
     <h4 class="text-c-yellow f-w-600">{{user_count}}</h4>
-    <h6 class="text-muted m-b-0">Total Employee's Created </h6>
+    <h6 class="text-muted m-b-0">Total Employee's</h6>
     </div>
     <div class="col-4 text-right">
     <i class="fas fa-users f-28"></i>
@@ -99,7 +99,7 @@
     <div class="row align-items-center">
     <div class="col-8">
     <h4 class="text-c-green f-w-600">{{job_count}}</h4>
-    <h6 class="text-muted m-b-0">Total Leave Created </h6>
+    <h6 class="text-muted m-b-0">Total Leave </h6>
     </div>
     <div class="col-4 text-right">
     <i class="far fa-newspaper f-28"></i>
